--- a/src/app/shared/component/form-signup/form-signup.component.html
+++ b/src/app/shared/component/form-signup/form-signup.component.html
@@ -41,11 +41,8 @@
 
                                 <button mat-raised-button [disabled]="!isRequiredNext()" class="ng-btn ng-btn-proximo"
                                     (click)="btnProximo()">Proximo</button>
-                                <span class="ng-text" (click)="pageResetPassword()">Esqueceu sua senha?</span>
-                                <button class="ng-btn ng-btn-signup" mat-flat-button color="secundary"
-                                    (click)="pageSignin()">Login</button>
-
-
+                                <!-- <span class="ng-text" (click)="pageSignin()">Login</span> -->
+                               
                             </div>
                         </div>
                         <div #slide class="slide">
