--- a/src/app/features/pages/home/header/header.component.scss
+++ b/src/app/features/pages/home/header/header.component.scss
@@ -164,7 +164,7 @@
     }
     .menu{
         background-color: #0a1630;
-        right: 1px;
+        right: 0;
         top: 5%;
         position: absolute;
         padding: 0 5px;
@@ -180,7 +180,7 @@
                         margin-top: 5px;
 
             li{
-                padding: 5px 00;
+                padding: 5px 0;
                 font-size: 15px;
                 cursor: pointer;
             }
