criando menu corrigindo dados vindo do token e colocando imagem no header

--- a/src/app/features/pages/home/header/header.component.html
+++ b/src/app/features/pages/home/header/header.component.html
@@ -32,29 +32,41 @@
     <div class="card flex justify-center">
         @if (token != null) {
         <section class="ng-perfil" (click)="toggle($event)">
-            <mat-icon (click)="light()">
-                light_mode
-            </mat-icon>
-            <small class="ng-perfil-name">Olá Elivandro</small>
+            
+
+            
+            <small class="ng-perfil-name">Olá {{authDecodeUser.getName().split(" ")[0]}}</small>
+            @if (!authDecodeUser.getAvatar()) {
             <mat-icon class="ng-avatar-icon" (click)="Tmenu()">
                 person
             </mat-icon>
+            }@else {
+                <div  class="avatar" (click)="Tmenu()">
+                   <img [src]="authDecodeUser.getAvatar()"/>
+                </div>
+            }
         </section>
         }
         @if (exibimenu) {
         <div  class="menu">
             <div class="menu_drop">
-                <p>{{ emailUser }}</p>
+                <div class="detalhes">
+                    <p>{{ authDecodeUser.getSub() }}</p>
+                </div>
+                <div class="linha"></div>
                 <div class="menu_area">
 
                     <nav>
                         <ul>
-                            <li>Meus Pedidos</li>
-                            <li>Configurações</li>
                             <li>Editar Perfil</li>
-                            <li (click)="deslogar()">Log Out</li>
+                            <li>Meus Pedidos</li>
+                            <li>Configurações</li>   
                         </ul>
                     </nav>
+                </div>
+                <div class="linha"></div>
+                <div class="detalhes a">
+                    <button class="btn" (click)="deslogar()">Sair</button>
                 </div>
             </div>
         </div>
