--- a/src/app/features/pages/home/header/header.component.scss
+++ b/src/app/features/pages/home/header/header.component.scss
@@ -1,6 +1,6 @@
 @media screen and (min-width:700px) {
     .categoria {
-        
+
         background-color: #0a1630;
         padding: 0 40px;
 
@@ -139,6 +139,22 @@
                 font-size: 12px;
             }
 
+            .avatar {
+                width: 35px;
+                height: 35px;
+                border-radius: 15px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
             .ng-avatar-icon {
                 width: 35px;
                 height: 35px;
@@ -154,39 +170,75 @@
     .ng-usuario-logado {
         color: #fff;
     }
-    .ng-popover {
-        background: rgba($color: #BBB, $alpha: 0.9);
-        width: 15dvw;
-        border-radius:12px;
-        padding: 10px;
-        margin-top: 5px
-    }
-    .menu{
+
+    .menu {
         background-color: #0a1630;
         right: 0;
-        top: 5%;
+        top: 7%;
         position: absolute;
         padding: 0 5px;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
-        .menu_drop{
+
+        .menu_drop {
             display: flex;
             flex-direction: column;
             padding: 10px 0;
-            .menu_area{
+
+            .menu_area {
                 display: flex;
-            flex-direction: column;
-                        margin-top: 5px;
+                flex-direction: column;
+                margin-top: 5px;
 
-            li{
-                padding: 5px 0;
-                font-size: 15px;
-                cursor: pointer;
-            }
-            li:hover{
-                background-color: #064b5a;
+                li {
+                    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+                    padding: 5px 0;
+                    font-size: 15px;
+                    color: #BBB;
+                    cursor: pointer;
+                }
+
+                li:hover {
+                    color: #064b5a;
+                }
+
             }
 
+            .detalhes {
+                height: 36px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                padding: 0px 2px;
+
+                p {
+                    font-size: 16px;
+                }
+            }
+
+            .a {
+                .btn {
+                    background-color: #FF9933;
+                    border-radius: 5px;
+                    padding: 2px 0;
+                    border: 0;
+                    transition: all 1s ease-in;
+                    transform: scale(0.97);
+                    cursor: pointer;
+                }
+                .btn:hover {
+                    background-color: #ac5f13;
+                    transition: all 0.5s ease;
+                    color: #f2f2f2;
+                }
+
+            }
+
+            .linha {
+                height: 1px;
+                background-color: rgba(255, 255, 255, 0.1);
+                width: 100%;
+                margin: 8px 0;
             }
         }
     }
