Criando Rotas my-account v1

--- a/src/app/features/pages/categorias/categorias.component.html
+++ b/src/app/features/pages/categorias/categorias.component.html
@@ -1,6 +1,8 @@
 <app-page-container>
     <div class="main">
         <app-header [carrinho]="true" class="s" categoria="categoria"></app-header>
+
+        <app-mobile-navbar></app-mobile-navbar>
         <div class="ng-categoria">
             <section class="container-area">
                 <div class="carrossel">
