--- a/src/app/features/pages/home/header/header.component.html
+++ b/src/app/features/pages/home/header/header.component.html
@@ -1,3 +1,4 @@
+@if (isVisible) {
 <header class="ng-header" [ngClass]="[(categoria || ''), token != null && isHome ? 'ng-usuario-logado' : '']">
     <section class="ng-logo" (click)="pageHome()">
         @if (admin) {
@@ -31,52 +32,53 @@
 
     <div class="card flex justify-center">
         @if (token != null) {
-        <section class="ng-perfil" (click)="toggle($event)">
+            <section class="ng-perfil" >
 
 
 
-            <small class="ng-perfil-name">Olá {{authDecodeUser.getName().split(" ")[0]}}</small>
-            @if (!authDecodeUser.getAvatar()) {
-            <mat-icon class="ng-avatar-icon" (click)="Tmenu()">
-                person
-            </mat-icon>
-            }@else {
-            <div class="avatar" (click)="Tmenu()">
-                <img [src]="authDecodeUser.getAvatar()" />
-            </div>
-            }
-        </section>
+                <small class="ng-perfil-name">Olá {{authDecodeUser.getName().split(" ")[0]}}</small>
+                @if (!authDecodeUser.getAvatar()) {
+                <mat-icon class="ng-avatar-icon" (click)="Tmenu()">
+                    person
+                </mat-icon>
+                }@else {
+                <div class="avatar" (click)="Tmenu()">
+                    <img [src]="authDecodeUser.getAvatar()" />
+                </div>
+                }
+            </section>
         }
         @if (exibimenu) {
-        <div class="menu">
-            <div class="menu_drop">
-                <div class="detalhes">
-                    <p>{{ authDecodeUser.getSub() }}</p>
-                </div>
-                <div class="linha"></div>
-                <div class="menu_area">
+            <div class="menu">
+                <div class="menu_drop">
+                    <div class="detalhes">
+                        <p>{{ authDecodeUser.getSub() }}</p>
+                    </div>
+                    <div class="linha"></div>
+                    <div class="menu_area">
 
-                    <nav>
-                        <ul>
-                            <li>Editar Perfil</li>
-                            <li>Meus Pedidos</li>
-                            <li>Configurações</li>
-                            <!-- so aparecer quando o usuario estiver logado e o perfil for admin -->
-                             @if (!isAdminRoute() && authDecodeUser.getRole().includes("ROLE_ADMIN")) {
+                        <nav>
+                            <ul>
+                                <li>Editar Perfil</li>
+                                <li>Meus Pedidos</li>
+                                <li>Configurações</li>
+                                <!-- so aparecer quando o usuario estiver logado e o perfil for admin -->
+                                @if (!isAdminRoute() && authDecodeUser.getRole().includes("ROLE_ADMIN")) {
                                 <li (click)="adminrouter()" [class.disabled]="isAdminRoute()">zapdai
-                                admin</li>
-                             }
-                            
-                        </ul>
-                    </nav>
-                </div>
-                <div class="linha"></div>
-                <div class="detalhes a">
-                    <button class="btn" (click)="deslogar()">Sair</button>
+                                    admin</li>
+                                }
+
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="linha"></div>
+                    <div class="detalhes a">
+                        <button class="btn" (click)="deslogar()">Sair</button>
+                    </div>
                 </div>
             </div>
-        </div>
         }
     </div>
 
 </header>
+}
