--- a/src/app/features/pages/home/home.component.html
+++ b/src/app/features/pages/home/home.component.html
@@ -1,12 +1,15 @@
-<app-header [admin]="true" (ativaMenu)="ativo()" ></app-header>
- <main class="ng-container">
+<app-header [admin]="true" (ativaMenu)="ativo()"></app-header>
+
+<app-mobile-navbar></app-mobile-navbar>
+<main class="ng-container">
     <aside>
         <app-menu-dropdown [desabled]="ativa"></app-menu-dropdown>
     </aside>
     <section class="ng-main">
         <div class="area-main">
-            <router-outlet></router-outlet>
         </div>
     </section>
- </main>
- <app-footer></app-footer>
+</main>
+<app-footer></app-footer>
+
+<router-outlet></router-outlet>
