--- a/src/app/features/pages/my-account/home-my-account/home-my-account.component.scss
+++ b/src/app/features/pages/my-account/home-my-account/home-my-account.component.scss
@@ -237,11 +237,12 @@
 @media screen and (min-width:730px) {
     .ng-main {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;
         background: #F2F2F2;
         width: 100%;
         height: 100vh;
+        padding: 0;
+        margin: 0;
 
         .container {
             display: flex;
