--- a/src/app/features/pages/my-account/home-my-account/home-my-account.component.html
+++ b/src/app/features/pages/my-account/home-my-account/home-my-account.component.html
@@ -1,5 +1,5 @@
 <div class="ng-main">
-    <app-header categoria="categoria"></app-header>
+    <app-header [carrinho]="true"></app-header>
     <app-mobile-navbar></app-mobile-navbar>
 
     <div class="container">
