--- a/src/app/features/pages/planos/posCheckout/posCheckout.component.html
+++ b/src/app/features/pages/planos/posCheckout/posCheckout.component.html
@@ -3,11 +3,10 @@
         <div class="container">
             <div class="card">
                 <h1>✅ Pagamento Confirmado!</h1>
-                <p class="welcome">Seja bem-vindo ao <strong>Zapdai</strong>!</p>
                 <p>Sua assinatura foi ativada com sucesso.</p>
-                <p>Você pode esta cadastrando sua empresa agora mesmo, clicando no botão abaixo!</p>
+                <p>Você pode acessar agora mesmo a área de Administrador da sua conta, clicando no botão abaixo!</p>
                 <div class="section">
-                    <button class="ng-btn" (click)="pageCadastroEmpresa()">Cadastrar Meu Negócio</button>
+                    <button class="ng-btn" (click)="pageAdmin()">Acessar Meu Negócio</button>
                 </div>
             </div>
         </div>
