--- a/src/app/features/pages/categorias/categorias.component.html
+++ b/src/app/features/pages/categorias/categorias.component.html
@@ -1,6 +1,6 @@
 <app-page-container>
     <div class="main">
-        <app-header [carrinho]="true" class="s" categoria="categoria"></app-header>
+        <app-header [carrinho]="true" class="s"></app-header>
 
         <app-mobile-navbar></app-mobile-navbar>
         <div class="ng-categoria">
